<resources>
    <string name="app_name">Personal Recipes</string>
    <string name="add">Add</string>
    <string name="search_recipes">Search</string>
    <string name="sortOrder">Order By</string>
    <string name="categories">Categories</string>
    <string name="rating">Rating</string>
    <string name="title">Title</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="comment">Comment</string>
    <string name="edit">Edit</string>
    <string name="take_photo">Take photo</string>
    <string name="additional_images">Additional Images</string>
</resources>