<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.RecipeOverviewActivity">

    <!-- Backdrop content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient_backdrop_background"
        android:padding="@dimen/distance_medium" android:weightSum="2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/seperator" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sortOrder"
                    android:textColor="@color/primary_light" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/cgOrderBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            app:chipIcon="@drawable/ic_baseline_arrow_drop_down"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            app:chipIcon="@drawable/ic_baseline_arrow_drop_up"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            app:chipIcon="@drawable/ic_baseline_arrow_downward"
                            app:chipIconVisible="true" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            app:chipIcon="@drawable/ic_baseline_arrow_upward"
                            app:chipIconVisible="true" />
                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>


                <include layout="@layout/seperator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/primary_light" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></com.google.android.material.chip.ChipGroup>
                <include layout="@layout/seperator" />

            </LinearLayout>
        </ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <!-- Content -->
    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_peekHeight="56dp"
        app:layout_behavior=".ui.utils.GestureLockedBottomSheetBehavior">

        <!-- Header of Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rounded_header"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/distance_medium">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtSearch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_recipes"
                android:importantForAutofill="no"
                android:inputType="textFilter"
                android:paddingEnd="@dimen/distance_medium"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/search_recipes"
                app:startIconDrawable="@drawable/ic_baseline_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSearchEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_light" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/filterIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/ic_baseline_filter_list" />

        </LinearLayout>

        <!-- Content Body -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srlSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRecipes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/distance_small" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add"
        android:src="@drawable/ic_baseline_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>